tests/testcases/errors/BCE0072-2.boo
"""
BCE0072-2.boo(6,16): BCE0022: Cannot convert 'System.Int32' to 'System.String'.
"""
class Foo:
	override def ToString():
		return 3
